Grease Pencil: No easy way to exit from continuous draw mode when using tablet with no keyboard #43867

Closed
opened 2015-03-03 08:42:26 +01:00 by Andrew Buttery · 12 comments

System Information
Surface Pro 3
i7
6 GB RAM
Windows 8.1

Blender Version

Broken: 2.73a

Worked: No sure if it ever would have worked.

Short description of error
Once you enable continuous draw mode and start drawing the only way to exit (that I know of) is to hit the escape key. However, if you are using a tablet with no keyboard (i.e. using a touch pen) then you are stuck and the only way to exit the drawing is to call up the "soft keyboard"

Exact steps for others to reproduce the error
Open Blender with default cube using a tablet
Enable grease pencil in properties ("N") panel
Select Grease pencil tab
Check continuous drawing option
Click draw.

Now you are stuck... with no quick way out.

**System Information** Surface Pro 3 i7 6 GB RAM Windows 8.1 **Blender Version** Broken: 2.73a Worked: No sure if it ever would have worked. **Short description of error** Once you enable continuous draw mode and start drawing the only way to exit (that I know of) is to hit the escape key. However, if you are using a tablet with no keyboard (i.e. using a touch pen) then you are stuck and the only way to exit the drawing is to call up the "soft keyboard" **Exact steps for others to reproduce the error** Open Blender with default cube using a tablet Enable grease pencil in properties ("N") panel Select Grease pencil tab Check continuous drawing option Click draw. Now you are stuck... with no quick way out.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AndrewButtery

Added subscriber: @AndrewButtery
Campbell Barton changed title from No easy way to exit from continuous draw mode when using tablet with no keyboard to Grease Pencil: No easy way to exit from continuous draw mode when using tablet with no keyboard 2015-03-03 10:30:17 +01:00
Joshua Leung was assigned by Sergey Sharybin 2015-03-03 13:00:55 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Joshua, mind having a look? Thanks! :)

Joshua, mind having a look? Thanks! :)

Added subscriber: @ideasman42

Added subscriber: @ideasman42

We could make it so RMB exits - as with other tools.

We could make it so RMB exits - as with other tools.
Member

The only problem with using RMB here is that RMB-drag currently/now activates the eraser instead.

There are several things I'm considering doing here... actually, on second though, they're not really mutually exclusive, so I might just do all of them ;)

  1. D/E keys to switch between drawing and eraser. For users with a keyboard, this may turn out to be even nicer than what we have now, and was closer to what I had in mind before going with the current RMB-toggles-eraser behaviour.
  2. Ensure that tablet eraser events invoke the eraser. So, for tablet users, there's no productivity loss either, as they can still fall back on the ways provided by the hardware for switching between different options. (Note: I'd need user feedback afterwards to verify if this in fact worked, since I don't currently have a nice working tablet yet)
  3. Any attempts to start strokes from outside the area/region where Grease Pencil was initially invoked will exit the drawing session. (Note: Will need to double check that starting from the toolbar doesn't come with any problems for being a different region)
The only problem with using RMB here is that RMB-drag currently/now activates the eraser instead. There are several things I'm considering doing here... actually, on second though, they're not really mutually exclusive, so I might just do all of them ;) 1) D/E keys to switch between drawing and eraser. For users with a keyboard, this may turn out to be even nicer than what we have now, and was closer to what I had in mind before going with the current RMB-toggles-eraser behaviour. 2) Ensure that tablet eraser events invoke the eraser. So, for tablet users, there's no productivity loss either, as they can still fall back on the ways provided by the hardware for switching between different options. (Note: I'd need user feedback afterwards to verify if this in fact worked, since I don't currently have a nice working tablet yet) 3) Any attempts to start strokes from outside the area/region where Grease Pencil was initially invoked will exit the drawing session. (Note: Will need to double check that starting from the toolbar doesn't come with any problems for being a different region)
Member

Ok, changed this to a design task, to get some feedback from the UI team on this.


Regarding the implementation of click-outside-area to exit:
From my investigations, it seems that my original idea of just checking whether the CTX_wm_area(C) == area when starting operator/first stroke doesn't actually work, since the current area doesn't actually change when a modal operator has control. (IIRC, this wasn't always the case for the Grease Pencil operator - see line 1800 in gpencil_paint.c for a check that used to do something, and now doesn't run). Instead, in the current implementation, it would be necessary to instead check if the mouse is outside the bounds for the area/region in question to do this.

While the area/locking behaviour for modal operators does make sense in some situations, it also has some problems too

  • It works when you're in the middle of drawing a stroke. In that case, straying outside the regions and then straying back in is something we want to be able to preserve. Making the sessions get terminated as soon as you stray 1-2 pixels over the edges would get annoying for artists really quickly.
  • It doesn't work when you're not actually drawing. In fact, it seems somewhat odd that the operator now seems to have global screen-wide powers of event capture, yet somehow can only draw when in the designated area, and clicking outside this region does nothing.

Discussing these issues with Campbell a bit in IRC, an interesting point came up that perhaps ALL modal operators should be made to stop working once you click outside the area where you invoked the tool in the first place. (Note: we're referring to Areas here and now Regions). That discussion should perhaps be separate from this one here, but I thought it would be useful to bring this option up here now, since it would be a nice solution to the original problem here (and with other uses for things like the knife tool, etc.)

Ok, changed this to a design task, to get some feedback from the UI team on this. --- Regarding the implementation of click-outside-area to exit: From my investigations, it seems that my original idea of just checking whether the CTX_wm_area(C) == area when starting operator/first stroke doesn't actually work, since the current area doesn't actually change when a modal operator has control. (IIRC, this wasn't always the case for the Grease Pencil operator - see line 1800 in gpencil_paint.c for a check that used to do something, and now doesn't run). Instead, in the current implementation, it would be necessary to instead check if the mouse is outside the bounds for the area/region in question to do this. While the area/locking behaviour for modal operators does make sense in some situations, it also has some problems too * It *works* when you're in the middle of drawing a stroke. In that case, straying outside the regions and then straying back in is something we want to be able to preserve. Making the sessions get terminated as soon as you stray 1-2 pixels over the edges would get annoying for artists really quickly. * It *doesn't work* when you're not actually drawing. In fact, it seems somewhat odd that the operator now seems to have global screen-wide powers of event capture, yet somehow can only draw when in the designated area, and clicking outside this region does nothing. Discussing these issues with Campbell a bit in IRC, an interesting point came up that perhaps ALL modal operators should be made to stop working once you click outside the area where you invoked the tool in the first place. (Note: we're referring to Areas here and now Regions). That discussion should perhaps be separate from this one here, but I thought it would be useful to bring this option up here now, since it would be a nice solution to the original problem here (and with other uses for things like the knife tool, etc.)
Member

On a side note, D1187 is a patch which would enable again the ability to tag specific operators as not being locked to the initial region/area combination. (I'm just noting this here more for my own reference, since I thought I'd seen this committed already when it hadn't.)

On a side note, [D1187](https://archive.blender.org/developer/D1187) is a patch which would enable again the ability to tag specific operators as not being locked to the initial region/area combination. (I'm just noting this here more for my own reference, since I thought I'd seen this committed already when it hadn't.)

This issue was referenced by be0dcd4e34

This issue was referenced by be0dcd4e3429dcbaaf4f2884695e883438fd0b95
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit be0dcd4e34.

Closed by commit be0dcd4e34.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43867
No description provided.